2014-10-12  Fabián Ezequiel Gallina  <fgallina@gnu.org>

	Fix import completion.  (Bug#18582)
	* progmodes/python.el (python-shell-completion-get-completions):
	Fix import case regexp.

2014-10-12  Stefan Monnier  <monnier@iro.umontreal.ca>

	* progmodes/bat-mode.el (bat-font-lock-keywords): Fix \\<_ typo
	(bug#18622).  Reported by Arni Magnusson <arnima@hafro.is>.
	* progmodes/prolog.el (prolog-electric--underscore): Same.

2014-10-12  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp-sh.el (tramp-get-remote-id): Check also for "gid".

2014-10-11  Jan Djärv  <jan.h.d@swipnet.se>

	* cus-start.el (all): Add missing ns and boolean to
	ns-use-fullscreen-animation.

2014-10-11  Leo Liu  <sdl.web@gmail.com>

	* progmodes/cfengine.el (cfengine3-defuns, cfengine3-vartypes):
	Use strings.
	(cfengine3-create-imenu-index): New function.
	(cfengine3-mode): Use it for `imenu-create-index-function'.
	(cfengine-auto-mode): Improve and prefer cfengine3-mode when
	buffer is empty.

2014-10-11  Jan Djärv  <jan.h.d@swipnet.se>

	* cus-start.el (all): Add ns-use-fullscreen-animation.

2014-10-11  Glenn Morris  <rgm@gnu.org>

	* calendar/diary-lib.el (diary-display-function):
	Drop support for deprecated nil and list forms.
	(diary-list-entries): Update for the above.
	* calendar/cal-x.el (calendar-dedicate-diary): Simplify accordingly.

2014-10-10  Leo Liu  <sdl.web@gmail.com>

	* window.el (temp-buffer-window-show): Make BUFFER a required arg.
	(Bug#18656)

2014-10-10  Stefan Monnier  <monnier@iro.umontreal.ca>

	* select.el (gui-selection-exists-p-alist): New method.
	* menu-bar.el (menu-bar-edit-menu, clipboard-yank):
	* simple.el (deactivate-mark): Use it.
	* term/x-win.el (gui-selection-exists-p):
	* term/w32-win.el (gui-selection-exists-p):
	* term/pc-win.el (gui-selection-exists-p):
	* term/ns-win.el (gui-selection-exists-p): Provide a backend instance.

2014-10-10  Glenn Morris  <rgm@gnu.org>

	* info.el (Info-fontify-maximum-menu-size): Bump to 400k.  (Bug#16227)